--- a/test/html/index.html
+++ b/test/html/index.html
@@ -33,6 +33,9 @@
       width: 100%;
       height: 100%;
     }
+    .connected {
+      background: rgba(0, 128, 255, 0.1);
+    }
     .svg-wrapper {
       width: 90%;
       height: 90%;
