Add TODO about switching back to dist import.

--- a/test/html/index.html
+++ b/test/html/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Match the Scramble</title>
+  <!-- TODO: Remove symlinks and switch back to ../../dist/match-the-scramble.js -->
   <script src="match-the-scramble.js"></script>
   <style>
     html, body {
